--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,1 +1,32 @@
-<p>signup works!</p>
+<div class="centered-content">
+    <form [formGroup]="signupForm" (ngSubmit)="signup()">
+        <div class="modal-box">
+
+            <h1 class="title has-text-primary">SIGN UP</h1>
+            <div class="field">
+                <p class="control">
+                    <input class="input is-small has-background-light is-medium" placeholder="Username"
+                        formControlName="username">
+                </p>
+            </div>
+            <div class="field">
+                <p class="control">
+                    <input type='password' class="input is-small has-background-light is-medium" placeholder="password"
+                        formControlName="password">
+                </p>
+            </div>
+            <div class="field is-pulled-right">
+                <p class="control">
+                    <button class="button is-success" type="submit">
+                        Sign Up
+                    </button>
+                </p>
+            </div>
+
+            <!-- <br> -->
+            <div class="field">
+                <p>Got an account? <br> <a routerLink="/login">Login</a> here!</p>
+            </div>
+        </div>
+    </form>
+</div>
