introducing fund wallet component, incomplete

--- a/src/app/pages/wallet/wallet.component.html
+++ b/src/app/pages/wallet/wallet.component.html
@@ -8,7 +8,7 @@
     </div>
     <!-- Profile Display-->
     <div class="profile-content">
-        <div class="profile-tags title has-text-primary">FUND WALLET</div>
+        <div class="profile-tags title has-text-primary" [routerLink]="[wallets._id]">FUND WALLET</div>
         <div class="profile-tags title has-text-primary">WITHDRAWAL</div>
         <div class="profile-tags title has-text-primary">MY CYCLES</div>
     </div>
