INCOMPLETE. Cycle Model, Cycle Routes, Cycle Servi
Final Save to Patch/Join Cycle

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
                     </a>
                 </div>
                 <div class="profile-tags title has-text-primary">
-                    <a routerLink="/cycle-view">
+                    <a [routerLink]="['/cycle']">
                         CYCLES
                     </a>
                 </div>
