--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -21,7 +21,7 @@
                 <div class="profile-tags title has-text-primary">MESSAGES</div>
                 <div class="profile-tags title has-text-primary">INVEST</div>
                 <div class="profile-tags title has-text-primary">REFER</div>
-                <div class="profile-tags title has-text-primary">SETTINGS</div>
+                <div class="profile-tags title has-text-primary">AJO</div>
                 
             </div>
         </div>
