--- a/src/app/pages/wallet/wallet.component.html
+++ b/src/app/pages/wallet/wallet.component.html
@@ -10,6 +10,6 @@
     <div class="profile-content">
         <div class="profile-tags title has-text-primary" [routerLink]="[wallets._id]">FUND WALLET</div>
         <div class="profile-tags title has-text-primary">WITHDRAWAL</div>
-        <div class="profile-tags title has-text-primary">MY CYCLES</div>
+        <div class="profile-tags title has-text-primary" (click)="navigate()">MY CYCLES</div>
     </div>
 </div>
