--- a/src/app/pages/wallet/my-cycles/my-cycles.component.html
+++ b/src/app/pages/wallet/my-cycles/my-cycles.component.html
@@ -4,18 +4,16 @@
             <h1 class="title has-text-primary">CYCLES</h1>
             <div class="list-menu">
                 <a class="list-menu-item" *ngFor="let cycle of cycles" routerLinkActive='is-active'>
-                    <p (click)="getDetails(cycle._id)">{{ cycle.cycleAmount }}/{{ cycle.frequency }}</p>
+                    <p (click)="getDetails(cycle)">{{ cycle }}</p>
                 </a>
             </div>
-
-            <button class="button is-primary has-text-white" routerLink="/new-cycle">Create Cycle</button>
         </div>
         <div class="profile has-background-light">
             <h1 class="title has-text-primary">CYCLE DETAILS</h1>
 
             <div class="profile-content">
                 <div class="profile-tags" *ngFor="let wallet of wallets">
-                    <div class="card-content" (click)="leaveCycle(wallet._userId)">
+                    <div class="card-content">
                         <div class="media">
                             <div class="media-left">
                                 <figure class="image is-48x48">
@@ -29,17 +27,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="details">
-            <p *ngIf="alreadyJoined">You has already joined this circle</p>
-            <h3 class="has-text-secondary" *ngIf="lengthOfWallet">{{ lengthOfWallets }} wallets have already signed up.
-            </h3>
-
-                <p class="control" type="submit" *ngIf="check">
-                    <button (click)="joinCycle()" class="button is-primary has-text-white">
-                        Join
-                    </button>
-                </p>
             </div>
         </div>
     </div>
