--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -2,12 +2,38 @@
     <div class="container">
         <div class="profile has-background-light">
             <h1 class="title has-text-primary">WELCOME</h1>
-            <!-- Profile Display-->
+            <!-- Profile Forms-->
             <div class="profile-content">
-                <p>Dear Cycler,</p>
-                <p>You are welcome to the family <br> A confirmation has been sent to your mail</p>
-                <p>Clich <a routerLink="/login">here </a> to login</p>
-                
+
+                            <!-- Start of Profile Forms-->
+
+
+<app-progress>
+    <app-progress-step>
+        <h1>Step 1</h1>
+        <button progressStepNext>next</button>
+    </app-progress-step>
+    <app-progress-step>
+        <h1>Step 2</h1>
+        <button progressStepPrev>prev</button>
+        <button progressStepNext>next</button>
+    </app-progress-step>
+    <app-progress-step>
+        <h1>Step 3</h1>
+        <button progressStepPrev>prev</button>
+        <button progressStepNext>next</button>
+    </app-progress-step>
+    <app-progress-step>
+        <h1>Step 4</h1>
+        <button progressStepPrev>prev</button>
+        <button progressStepNext>next</button>
+    </app-progress-step>
+</app-progress>
+
+
+                            <!-- End of Profile Forms-->
+
+
             </div>
         </div>
     </div>
