--- a/src/app/pages/wallet/my-cycles/my-cycles.component.html
+++ b/src/app/pages/wallet/my-cycles/my-cycles.component.html
@@ -9,7 +9,7 @@
             </div>
         </div>
         <div class="profile has-background-light">
-            <h1 class="title has-text-primary">CYCLE DETAILS</h1>
+            <h1 class="title has-text-primary">MY CYCLE DETAILS</h1>
 
             <div class="profile-content">
                 <div class="profile-tags" *ngFor="let wallet of wallets">
