--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -2,8 +2,9 @@
 
 .container {
     display: flex;
-    width: 100%;
+    width: 100px;
     height: 100%;
+    justify-content: center;
     max-width: 1000px;
     max-height: 680px;
 }
@@ -21,12 +22,14 @@
 .profile {
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-    padding: 42px;
-    width: 100%;
-
+    border-bottom-left-radius: 15px;
+    border-top-left-radius: 15px;
+    align-items: center;
+    padding: 30px;
+    width: 70%;
+    box-shadow: 0 20px 25px rgba(0, 0, 0, .2);
 }
 
 .title {
@@ -91,6 +94,10 @@
             cursor: pointer;
         }
     }
+}
 
-
+.flex-column {
+    display: flex;
+    flex-direction: column;
+    padding-top: -30px;
 }
