--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -7,7 +7,6 @@
     justify-content: center;
     max-width: 1000px;
     max-height: 680px;
-    //border: 1px red solid;
 }
 
 .profile {
@@ -17,42 +16,15 @@
     border-bottom-right-radius: 15px;
     border-bottom-left-radius: 15px;
     border-top-left-radius: 15px;
+    align-items: center;
     padding: 30px;
     width: 70%;
-    box-shadow: 0 15px 20px rgba(0, 0, 0, .1);
-}
+    box-shadow: 0 20px 25px rgba(0, 0, 0, .2);
 
-.title {
-    font-family: 'Lato';
-    font-size: 20px;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-}
-
-.list-menu {
-    display: flex;
-    flex-direction: column;
-    margin-top: 10px;
-    flex-grow: 1;
-    font-size: 15px;
-    
-    .list-menu-item {
-        display: flex;
-        align-items: center;
-        border-radius: 5px;
-        width: 100%;
-        color: #5f5f5f;
-        margin-bottom: 2.5px;
-        padding: 7px;
-
-        &:hover {
-            background: $light;
-        }
-
-        &.is-active {
-            background-color: $deep-yellow;
-            color: $dark-orange;
-        }
+    h1 {
+        font-weight: bolder;
+        font-size: 35px;
+        letter-spacing: .5rem;
     }
 }
 
@@ -60,9 +32,30 @@
     display: flex;
     background: white;
     padding: 20px 20px;
-    height: 100%;
+    height: 90%;
     width: 100%;
-    flex-flow: wrap;
     justify-content: center;
 
+    p {
+        margin-top: 10px;
+        padding-bottom: 10px;
+        font-size: 1.35rem;
+    }
+}
+
+.form-box {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+}
+
+.control {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.selected {
+    width: 180%;
+    margin-top: -10px;
 }
